--- a/homepage.html
+++ b/homepage.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br"> <!--Linguagem agora está em portugues -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HortfruitLand</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
@@ -24,8 +24,8 @@
                     <a href="cadastro-login.html?">
                         <i class="fas fa-user"></i> 
                     </a>
-                    <a href="login.php" class="link">Entre</a> ou 
-                    <a href="cadastro.php" class="link">Cadastre-se</a>
+                    <a href="login.html" class="link">Entre</a> ou 
+                    <a href="signup.html" class="link">Cadastre-se</a> <!-- Alterado para arquivos HTML-->
                 </li>
                 <li class="info">
                     <a href="">
