--- a/homepage.html
+++ b/homepage.html
@@ -78,7 +78,7 @@
                 <button class="carousel-btn left">&lt;</button>
                 <ul class="carousel">
                     <li>
-                        <a href="">
+                        <a href="https://aul-rel.github.io/Waiting.../">
                             <i class="fas fa-tag"></i> Ofertas
                         </a>
                     </li>
