--- a/homepage.html
+++ b/homepage.html
@@ -24,7 +24,7 @@
                     <a href="cadastro-login.html?">
                         <i class="fas fa-user"></i> 
                     </a>
-                    <a href="login.html" class="link">Entre</a> ou 
+                    <a href="login[1].html" class="link">Entre</a> ou 
                     <a href="signup.html" class="link">Cadastre-se</a> <!-- Alterado para arquivos HTML-->
                 </li>
                 <li class="info">
