--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Burguer</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
     <header>
@@ -28,61 +28,61 @@
             <h3>Burgers</h3>
             <div class="menu-items">
                 <div class="menu-item">
-                    <img src="../img/burguers/b1.jpg" alt="Galactic Classic">
+                    <img src="img/burguers/b1.jpg" alt="Galactic Classic">
                     <h4>Galactic Classic</h4>
                     <p>A classic burger with a cosmic twist.</p>
                     <div class="price">$8.99</div>
                 </div>
                 <div class="menu-item">
-                    <img src="../img/burguers/b2.jpg" alt="Astro Cheese">
+                    <img src="img/burguers/b2.jpg" alt="Astro Cheese">
                     <h4>Astro Cheese</h4>
                     <p>Cheesy goodness that's out of this world.</p>
                     <div class="price">$9.49</div>
                 </div>
                 <div class="menu-item">
-                    <img src="../img/burguers/b3.jpg" alt="Rocket BBQ">
+                    <img src="img/burguers/b3.jpg" alt="Rocket BBQ">
                     <h4>Rocket BBQ</h4>
                     <p>Smoky BBQ flavor that will launch your taste buds.</p>
                     <div class="price">$10.49</div>
                 </div>
                 <div class="menu-item">
-                    <img src="../img/burguers/b4.jpg" alt="Galactic Classic">
+                    <img src="img/burguers/b4.jpg" alt="Galactic Classic">
                     <h4>Galactic Classic</h4>
                     <p>A classic burger with a cosmic twist.</p>
                     <div class="price">$8.99</div>
                 </div>
                 <div class="menu-item">
-                    <img src="../img/burguers/b5.jpg" alt="Astro Cheese">
+                    <img src="img/burguers/b5.jpg" alt="Astro Cheese">
                     <h4>Astro Cheese</h4>
                     <p>Cheesy goodness that's out of this world.</p>
                     <div class="price">$9.49</div>
                 </div>
                 <div class="menu-item">
-                    <img src="../img/burguers/b6.jpg" alt="Rocket BBQ">
+                    <img src="img/burguers/b6.jpg" alt="Rocket BBQ">
                     <h4>Rocket BBQ</h4>
                     <p>Smoky BBQ flavor that will launch your taste buds.</p>
                     <div class="price">$10.49</div>
                 </div>
                 <div class="menu-item">
-                    <img src="../img/burguers/b7.jpg" alt="Astro Cheese">
+                    <img src="img/burguers/b7.jpg" alt="Astro Cheese">
                     <h4>Astro Cheese</h4>
                     <p>Cheesy goodness that's out of this world.</p>
                     <div class="price">$9.49</div>
                 </div>
                 <div class="menu-item">
-                    <img src="../img/burguers/b8.jpg" alt="Rocket BBQ">
+                    <img src="img/burguers/b8.jpg" alt="Rocket BBQ">
                     <h4>Rocket BBQ</h4>
                     <p>Smoky BBQ flavor that will launch your taste buds.</p>
                     <div class="price">$10.49</div>
                 </div>
                 <div class="menu-item">
-                    <img src="../img/burguers/b9.jpg" alt="Astro Cheese">
+                    <img src="img/burguers/b9.jpg" alt="Astro Cheese">
                     <h4>Astro Cheese</h4>
                     <p>Cheesy goodness that's out of this world.</p>
                     <div class="price">$9.49</div>
                 </div>
                 <div class="menu-item">
-                    <img src="../img/burguers/b10.jpg" alt="Rocket BBQ">
+                    <img src="img/burguers/b10.jpg" alt="Rocket BBQ">
                     <h4>Rocket BBQ</h4>
                     <p>Smoky BBQ flavor that will launch your taste buds.</p>
                     <div class="price">$10.49</div>
@@ -114,31 +114,31 @@
             <h3>Drinks</h3>
             <div class="menu-items">
                 <div class="menu-item">
-                    <img src="../img/juices/ginger-juice-4896003_1920.jpg" alt="Cosmic Cola">
+                    <img src="img/juices/ginger-juice-4896003_1920.jpg" alt="Cosmic Cola">
                     <h4>Solar Fizz</h4>
                     <p>A refreshing cola that will blast your taste buds.</p>
                     <div class="price">$2.49</div>
                 </div>
                 <div class="menu-item">
-                    <img src="../img/juices/juice-2561339_1920.jpg" alt="Starfruit Shake">
+                    <img src="img/juices/juice-2561339_1920.jpg" alt="Starfruit Shake">
                     <h4>Triple StarBerry</h4>
                     <p>A sweet shake made with starfruit and ice cream.</p>
                     <div class="price">$3.99</div>
                 </div>
                 <div class="menu-item">
-                    <img src="../img/juices/sugarcane-5388628_1920.jpg" alt="Cosmic Cola">
+                    <img src="img/juices/sugarcane-5388628_1920.jpg" alt="Cosmic Cola">
                     <h4>Nebula Nectar</h4>
                     <p>A refreshing cola that will blast your taste buds.</p>
                     <div class="price">$2.49</div>
                 </div>
                 <div class="menu-item">
-                    <img src="../img/juices/500.png" alt="Starfruit Shake">
+                    <img src="img/juices/500.png" alt="Starfruit Shake">
                     <h4>Starfruit Shake</h4>
                     <p>A sweet shake made with starfruit and ice cream.</p>
                     <div class="price">$3.99</div>
                 </div>
                 <div class="menu-item">
-                    <img src="../img/juices/grape-juice-recipe.jpg" alt="Cosmic Cola">
+                    <img src="img/juices/grape-juice-recipe.jpg" alt="Cosmic Cola">
                     <h4>Galactic Grape</h4>
                     <p>A refreshing cola that will blast your taste buds.</p>
                     <div class="price">$2.49</div>
