--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
             <h3>Sides</h3>
             <div class="menu-items">
                 <div class="menu-item">
-                    <img src="https://via.placeholder.com/250" alt="Galaxy Fries">
+                    <img src="https://fakeimg.pl/1920x1280?font=museo" alt="Galaxy Fries">
                     <h4>Galaxy Fries</h4>
                     <p>Crispy golden fries sprinkled with cosmic seasoning.</p>
                     <div class="price">$3.99</div>
                 </div>
                 <div class="menu-item">
-                    <img src="https://via.placeholder.com/250" alt="Astro Rings">
+                    <img src="https://fakeimg.pl/1920x1280?font=museo" alt="Astro Rings">
                     <h4>Astro Rings</h4>
                     <p>Onion rings with a galactic crunch.</p>
                     <div class="price">$4.49</div>
