--- a/areaadmin.html
+++ b/areaadmin.html
@@ -1,50 +1,151 @@
-<!-- Work in progress -->
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Área Administrativa - Hamburgueria</title>
+  <style>
+    * {
+      box-sizing: border-box;
+      font-family: Arial, sans-serif;
+    }
+    body {
+      margin: 0;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    header {
+      background-color: #D62828;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    nav {
+      background-color: #f0f0f0;
+      padding: 10px;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+    }
+    nav button {
+      background-color: #ffffff;
+      border: 1px solid #ccc;
+      padding: 10px 20px;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+    nav button:hover {
+      background-color: #eee;
+    }
+    .container {
+      max-width: 900px;
+      margin: 20px auto;
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    .section {
+      display: none;
+    }
+    .section.active {
+      display: block;
+    }
+    h2 {
+      margin-top: 0;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+    }
+    table th, table td {
+      padding: 10px;
+      border: 1px solid #ddd;
+      text-align: left;
+    }
+    .btn {
+      background-color: #D62828;
+      color: white;
+      padding: 8px 12px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    .btn:hover {
+      background-color: #b71c1c;
+    }
+  </style>
 </head>
 <body>
-    <div class="container text-left">
-        <br>
-        <div class="row">
-          <div class="col-6">
-            <h1>Administração</h1><br>
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                  <h5 class="card-title"></h5>
-                  <h6 class="card-subtitle mb-2 text-muted">Bem vindo de volta</h6>
-                </div>
-          </div><br>
-          <div class="dropdown">
-            <!-- Botão que abre o dropdown -->
-            <button 
-              class="btn btn-secondary dropdown-toggle" 
-              type="button" 
-              id="dropdownMenuButton" 
-              data-bs-toggle="dropdown" 
-              aria-expanded="false"
-            >
-              Menu
-            </button>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Clientes</a>
-           </div>
-          </div></div>
-          <div class="col-6">
-            <br>
-            <h1>Clientes</h1><br>
-           
-          </div>
-          <div class="col">
-           
-          </div>
-        </div>
-      </div>
+  <header>
+    <h1>Administração - Hamburgueria</h1>
+  </header>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+  <nav>
+    <button onclick="showSection('hamburgueres')">Hambúrgueres</button>
+    <button onclick="showSection('clientes')">Clientes</button>
+  </nav>
+
+  <div class="container">
+    <div id="hamburgueres" class="section active">
+      <h2>Gerenciar Hambúrgueres</h2>
+      <button class="btn">Adicionar Novo Hambúrguer</button>
+      <table>
+        <thead>
+          <tr>
+            <th>Nome</th>
+            <th>Preço</th>
+            <th>Ações</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Cheeseburger</td>
+            <td>R$ 25,00</td>
+            <td>
+              <button class="btn">Editar</button>
+              <button class="btn">Excluir</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div id="clientes" class="section">
+      <h2>Gerenciar Clientes</h2>
+      <button class="btn">Adicionar Novo Cliente</button>
+      <table>
+        <thead>
+          <tr>
+            <th>Nome</th>
+            <th>Email</th>
+            <th>Ações</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>João Silva</td>
+            <td>joao@email.com</td>
+            <td>
+              <button class="btn">Editar</button>
+              <button class="btn">Excluir</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <script>
+    function showSection(id) {
+      const sections = document.querySelectorAll('.section');
+      sections.forEach(section => {
+        section.classList.remove('active');
+      });
+      document.getElementById(id).classList.add('active');
+    }
+  </script>
 </body>
 </html>
