--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </nav>
     </header>
     <section class="hero" id="home">
-        <h2>Welcome to Space Burguer</h2>
-        <p>The best burgers in the galaxy!</p>
+        <h2>Bem-vindo ao Space Burguer</h2>
+        <p>O melhor hambúrguer da galáxia!</p>
     </section>
     <section class="menu" id="menu">
         <h2>Our Menu</h2>
