--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <nav>
             <a href="#home">Home</a>
             <a href="#menu">Menu</a>
-            <a href="#contact">Contact</a>
+            <a href="#contact">Contato</a>
+            <a href="login.html">Entre</a>
         </nav>
     </header>
     <section class="hero" id="home">
