--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="#menu">Menu</a>
             <a href="#contact">Contato</a>
             <a href="login.html">Entre</a>
+            <a href="cadastro.html">Cadastre-se</a>
         </nav>
     </header>
     <section class="hero" id="home">
