--- a/areacliente.html
+++ b/areacliente.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="areacliente.css"> 
+    <link rel="stylesheet" href="css/areacliente.css"> 
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 </head>
 <body>
     <!-- Container do Menu no topo à esquerda -->
     <!-- Image and text -->
-<nav class="navbar navbar-light bg-light">
+    <nav class="navbar">
   <a class="navbar-brand" href="#">
     <img src="img/logo1.png" width="30" height="30" class="d-inline-block align-top" alt="">
     Space Burguer
