--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p>O melhor hambúrguer da galáxia!</p>
     </section>
     <section class="menu" id="menu">
-        <h2>Our Menu</h2>
+        <h2>Menu</h2>
 
         <!-- Burgers Category -->
         <div class="menu-category">
