--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1>Space Burguer</h1>
         <nav>
             <a href="#home">Home</a>
-            <a href="#menu">Menu</a>
+            <a href="#menu">Cardápio</a>
             <a href="#contact">Contato</a>
-            <a href="login.html">Entre</a>
+            <a href="login.html">Entrar</a>
             <a href="cadastro.html">Cadastre-se</a>
         </nav>
     </header>
@@ -23,7 +23,7 @@
         <p>O melhor hambúrguer da galáxia!</p>
     </section>
     <section class="menu" id="menu">
-        <h2>Menu</h2>
+        <h2>Nosso Cardápio</h2>
 
         <!-- Burgers Category -->
         <div class="menu-category">
