--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,25 +27,25 @@
 
         <!-- Burgers Category -->
         <div class="menu-category">
-            <h3>Burgers</h3>
+            <h3>Hambúrgueres</h3>
             <div class="menu-items">
                 <div class="menu-item">
                     <img src="img/burguers/b1.jpg" alt="Galactic Classic">
-                    <h4>Galactic Classic</h4>
-                    <p>A classic burger with a cosmic twist.</p>
-                    <div class="price">$8.99</div>
+                    <h4>Galactic Burguer</h4>
+                    <p>O clássico hambúrguer com um toque sideral.</p>
+                    <div class="price">R$10,99</div>
                 </div>
                 <div class="menu-item">
                     <img src="img/burguers/b2.jpg" alt="Astro Cheese">
                     <h4>Astro Cheese</h4>
-                    <p>Cheesy goodness that's out of this world.</p>
-                    <div class="price">$9.49</div>
+                    <p>Delicioso queijo de outra galáxia.</p>
+                    <div class="price">R$12,99</div>
                 </div>
                 <div class="menu-item">
                     <img src="img/burguers/b3.jpg" alt="Rocket BBQ">
-                    <h4>Rocket BBQ</h4>
-                    <p>Smoky BBQ flavor that will launch your taste buds.</p>
-                    <div class="price">$10.49</div>
+                    <h4>Rocket Barbecue</h4>
+                    <p>Sabor defumado de churrasco que vai despertar o seu paladar.</p>
+                    <div class="price">R$13,99</div>
                 </div>
                 <div class="menu-item">
                     <img src="img/burguers/b4.jpg" alt="Galactic Classic">
@@ -94,19 +94,19 @@
 
         <!-- Sides Category -->
         <div class="menu-category">
-            <h3>Sides</h3>
+            <h3>Acompanhamentos</h3>
             <div class="menu-items">
                 <div class="menu-item">
-                    <img src="https://fakeimg.pl/1920x1280?font=museo" alt="Galaxy Fries">
-                    <h4>Galaxy Fries</h4>
-                    <p>Crispy golden fries sprinkled with cosmic seasoning.</p>
-                    <div class="price">$3.99</div>
+                    <img src="img/sides/batatinha.jpg" alt="Galaxy Fries">
+                    <h4>Batatas Galácticas</h4>
+                    <p>Batatas fritas crocantes polvilhadas com tempero cósmico.</p>
+                    <div class="price">R$5,99</div>
                 </div>
                 <div class="menu-item">
                     <img src="https://fakeimg.pl/1920x1280?font=museo" alt="Astro Rings">
-                    <h4>Astro Rings</h4>
-                    <p>Onion rings with a galactic crunch.</p>
-                    <div class="price">$4.49</div>
+                    <h4>Anéis de Cebola</h4>
+                    <p>Anéis de cebola com um crocante galáctico.</p>
+                    <div class="price">R$6,99</div>
                 </div>
             </div>
         </div>
@@ -118,20 +118,20 @@
                 <div class="menu-item">
                     <img src="img/juices/ginger-juice-4896003_1920.jpg" alt="Cosmic Cola">
                     <h4>Solar Fizz</h4>
-                    <p>A refreshing cola that will blast your taste buds.</p>
-                    <div class="price">$2.49</div>
+                    <p>Um refresco refrescante que vai explodir seu paladar.</p>
+                    <div class="price">R$4,99</div>
                 </div>
                 <div class="menu-item">
                     <img src="img/juices/juice-2561339_1920.jpg" alt="Starfruit Shake">
                     <h4>Triple StarBerry</h4>
-                    <p>A sweet shake made with starfruit and ice cream.</p>
-                    <div class="price">$3.99</div>
+                    <p>Um milk-shake doce feito com sorvete e estrelas.</p>
+                    <div class="price">R$5,99</div>
                 </div>
                 <div class="menu-item">
                     <img src="img/juices/sugarcane-5388628_1920.jpg" alt="Cosmic Cola">
-                    <h4>Nebula Nectar</h4>
-                    <p>A refreshing cola that will blast your taste buds.</p>
-                    <div class="price">$2.49</div>
+                    <h4>Nectar Nebuloso</h4>
+                    <p>Que que isso?</p>
+                    <div class="price">R$4,99</div>
                 </div>
                 <div class="menu-item">
                     <img src="img/juices/500.png" alt="Starfruit Shake">
@@ -150,8 +150,8 @@
 
     </section>
     <footer id="contact">
-        <p>Contact us: spaceburguer@example.com | Phone: (123) 456-7890</p>
-        <p>&copy; 2025 Space Burguer. All rights reserved.</p>
+        <p>Contatos: spaceburguer@algumacoisa.com.br | Phone: (23) 867-5309</p>
+        <p>&copy; 2025 Hamburgueria Space Burguer. Todos os direitos reservados devido a pura ganância.</p>
     </footer>
 </body>
 </html>
