--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <div class="price">R$5,99</div>
                 </div>
                 <div class="menu-item">
-                    <img src="https://fakeimg.pl/1920x1280?font=museo" alt="Astro Rings">
+                    <img src="https://cdn.pixabay.com/photo/2021/02/11/02/43/onion-rings-6004075_1280.jpg" alt="Astro Rings">
                     <h4>Anéis de Cebola</h4>
                     <p>Anéis de cebola com um crocante galáctico.</p>
                     <div class="price">R$6,99</div>
@@ -113,7 +113,7 @@
 
         <!-- Drinks Category -->
         <div class="menu-category">
-            <h3>Drinks</h3>
+            <h3>Bebidas</h3>
             <div class="menu-items">
                 <div class="menu-item">
                     <img src="img/juices/ginger-juice-4896003_1920.jpg" alt="Cosmic Cola">
@@ -150,7 +150,7 @@
 
     </section>
     <footer id="contact">
-        <p>Contatos: spaceburguer@algumacoisa.com.br | Phone: (23) 867-5309</p>
+        <p>Contatos: atendimento@spaceburguer.com.br | Telefone: (22) 867-5309</p>
         <p>&copy; 2025 Hamburgueria Space Burguer. Todos os direitos reservados devido a pura ganância.</p>
     </footer>
 </body>
