--- a/cadastro.html
+++ b/cadastro.html
@@ -1,38 +1,75 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="css/signup.css"> 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <title>Cadastro - Space Burguer</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            background-color: #0d0d0d;
+            color: #fff;
+            font-family: 'Orbitron', sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .container {
+            background-color: #1a1a1a;
+            padding: 40px;
+            border-radius: 10px;
+            width: 300px;
+            box-shadow: 0 0 20px #ffcc00;
+            text-align: center;
+        }
+        h2 {
+            color: #ffcc00;
+            margin-bottom: 20px;
+        }
+        input {
+            width: 90%;
+            padding: 10px;
+            margin: 10px 0;
+            border: none;
+            border-radius: 5px;
+        }
+        button {
+            background-color: #ffcc00;
+            color: #0d0d0d;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+        button:hover {
+            background-color: #e6b800;
+        }
+        p {
+            font-size: 0.9rem;
+            margin-top: 15px;
+        }
+        a {
+            color: #ffcc00;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    <h1 id="titulo">Cadastre-se</h1><br><br>
-    <form method="post">
-        <div class="signup">
-            <label for="username"><b>Nome de usuário</b></label>
-            <input type="text" placeholder="Insira o usuário aqui" name="username" required><br>
-
-            <label for="email"><b>Email</b></label>
-            <input type="text" placeholder="Insira o email aqui" name="email" required><br>
-
-            <label for="date"><b>Data de nascimento</b></label>
-            <input type="date" placeholder="Insira sua data de nascimento" name="date"><br>
-
-            <label for="psw"><b>Senha</b></label>
-            <input type="password" placeholder="Insira a senha aqui" name="psw" required><br>
-        
-            <button type="submit">CADASTRE-SE</button>
-
-            <!-- <label>
-                <input type="checkbox" name="remember"> Lembrar acesso
-            </label>
-            
-        </div>
-        <div class="container">
-            <span class="psw"><a href="#">Esqueceu a senha?</a></span>
-        </div> -->
-    </form>
+    <div class="container">
+        <h2>Cadastro</h2>
+        <form action="login.html">
+            <input type="text" placeholder="Nome completo" required><br>
+            <input type="email" placeholder="Email" required><br>
+            <input type="password" placeholder="Senha" required><br>
+            <button type="submit">Cadastrar</button>
+        </form>
+        <p>Já tem uma conta? <a href="login.html">Entrar</a></p>
+    </div>
 </body>
 </html>
