--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="#home">Home</a>
             <a href="#menu">Cardápio</a>
             <a href="#contact">Contato</a>
-            <a href="login.html">Entrar</a>
+            <a href="login.html">Entre</a>
             <a href="cadastro.html">Cadastre-se</a>
         </nav>
     </header>
@@ -49,45 +49,33 @@
                 </div>
                 <div class="menu-item">
                     <img src="img/burguers/b4.jpg" alt="Galactic Classic">
-                    <h4>Galactic Classic</h4>
-                    <p>A classic burger with a cosmic twist.</p>
-                    <div class="price">$8.99</div>
+                    <h4>Burger Eclipse</h4>
+                    <p>Um sabor que apaga a luz da concorrência!</p>
+                    <div class="price">R$12,99</div>
                 </div>
                 <div class="menu-item">
                     <img src="img/burguers/b5.jpg" alt="Astro Cheese">
-                    <h4>Astro Cheese</h4>
-                    <p>Cheesy goodness that's out of this world.</p>
-                    <div class="price">$9.49</div>
+                    <h4>Via Láctea Cheddar</h4>
+                    <p>Tão gostoso que parece coisa de outro universo.</p>
+                    <div class="price">R$15,99</div>
                 </div>
                 <div class="menu-item">
                     <img src="img/burguers/b6.jpg" alt="Rocket BBQ">
-                    <h4>Rocket BBQ</h4>
-                    <p>Smoky BBQ flavor that will launch your taste buds.</p>
-                    <div class="price">$10.49</div>
+                    <h4>Saturn Bacon</h4>
+                    <p>Um clássico com órbita própria!</p>
+                    <div class="price">R$10,99</div>
                 </div>
                 <div class="menu-item">
                     <img src="img/burguers/b7.jpg" alt="Astro Cheese">
-                    <h4>Astro Cheese</h4>
-                    <p>Cheesy goodness that's out of this world.</p>
-                    <div class="price">$9.49</div>
+                    <h4>UFO Chicken</h4>
+                    <p>Um disco voador de sabor.</p>
+                    <div class="price">R$14,99</div>
                 </div>
                 <div class="menu-item">
                     <img src="img/burguers/b8.jpg" alt="Rocket BBQ">
-                    <h4>Rocket BBQ</h4>
-                    <p>Smoky BBQ flavor that will launch your taste buds.</p>
-                    <div class="price">$10.49</div>
-                </div>
-                <div class="menu-item">
-                    <img src="img/burguers/b9.jpg" alt="Astro Cheese">
-                    <h4>Astro Cheese</h4>
-                    <p>Cheesy goodness that's out of this world.</p>
-                    <div class="price">$9.49</div>
-                </div>
-                <div class="menu-item">
-                    <img src="img/burguers/b10.jpg" alt="Rocket BBQ">
-                    <h4>Rocket BBQ</h4>
-                    <p>Smoky BBQ flavor that will launch your taste buds.</p>
-                    <div class="price">$10.49</div>
+                    <h4>Estrelinha Kids</h4>
+                    <p>A refeição perfeita para cadetes espaciais.</p>
+                    <div class="price">R$7,99</div>
                 </div>
             </div>
         </div>
@@ -103,7 +91,7 @@
                     <div class="price">R$5,99</div>
                 </div>
                 <div class="menu-item">
-                    <img src="https://cdn.pixabay.com/photo/2021/02/11/02/43/onion-rings-6004075_1280.jpg" alt="Astro Rings">
+                    <img src="img/sides/cebolinha.jpg" alt="Astro Rings">
                     <h4>Anéis de Cebola</h4>
                     <p>Anéis de cebola com um crocante galáctico.</p>
                     <div class="price">R$6,99</div>
@@ -129,28 +117,28 @@
                 </div>
                 <div class="menu-item">
                     <img src="img/juices/sugarcane-5388628_1920.jpg" alt="Cosmic Cola">
-                    <h4>Nectar Nebuloso</h4>
-                    <p>Que que isso?</p>
+                    <h4>Névoa de Netuno</h4>
+                    <p>Refrigerante azul com toque de limão e hortelã.</p>
                     <div class="price">R$4,99</div>
                 </div>
                 <div class="menu-item">
                     <img src="img/juices/500.png" alt="Starfruit Shake">
-                    <h4>Starfruit Shake</h4>
-                    <p>A sweet shake made with starfruit and ice cream.</p>
-                    <div class="price">$3.99</div>
+                    <h4>Pó de Estrela</h4>
+                    <p>Milkshake de baunilha com glitter comestível.</p>
+                    <div class="price">R$5,99</div>
                 </div>
                 <div class="menu-item">
                     <img src="img/juices/grape-juice-recipe.jpg" alt="Cosmic Cola">
-                    <h4>Galactic Grape</h4>
-                    <p>A refreshing cola that will blast your taste buds.</p>
-                    <div class="price">$2.49</div>
+                    <h4>Fusão Solar</h4>
+                    <p>Suco de frutas cítricas com explosão de maracujá.</p>
+                    <div class="price">R$6,99</div>
                 </div>
             </div>
         </div>
 
     </section>
     <footer id="contact">
-        <p>Contatos: atendimento@spaceburguer.com.br | Telefone: (22) 867-5309</p>
+        <p>Contatos: atendimento@spaceburguer.com.br | Telefone: (21) 867-5309</p>
         <p>&copy; 2025 Hamburgueria Space Burguer. Todos os direitos reservados devido a pura ganância.</p>
     </footer>
 </body>
