--- a/areacliente.html
+++ b/areacliente.html
@@ -45,7 +45,7 @@
                         <div class="input-group">
                             <input type="password" class="form-control" id="senha" placeholder="********" readonly>
                             <button class="password-toggle" id="togglePassword">
-                                <img src="access.png" alt="Mostrar senha">
+                                <img src="img/access.png" alt="Mostrar senha">
                             </button>
                         </div>
                     </div>
