--- a/areaadmin.html
+++ b/areaadmin.html
@@ -5,78 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Área Administrativa - Hamburgueria</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      font-family: Arial, sans-serif;
-    }
-    body {
-      margin: 0;
-      background-color: #f9f9f9;
-      color: #333;
-    }
-    header {
-      background-color: #D62828;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-    nav {
-      background-color: #f0f0f0;
-      padding: 10px;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-    }
-    nav button {
-      background-color: #ffffff;
-      border: 1px solid #ccc;
-      padding: 10px 20px;
-      cursor: pointer;
-      border-radius: 5px;
-    }
-    nav button:hover {
-      background-color: #eee;
-    }
-    .container {
-      max-width: 900px;
-      margin: 20px auto;
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    .section {
-      display: none;
-    }
-    .section.active {
-      display: block;
-    }
-    h2 {
-      margin-top: 0;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 10px;
-    }
-    table th, table td {
-      padding: 10px;
-      border: 1px solid #ddd;
-      text-align: left;
-    }
-    .btn {
-      background-color: #D62828;
-      color: white;
-      padding: 8px 12px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    .btn:hover {
-      background-color: #b71c1c;
-    }
-  </style>
+  <link rel="stylesheet" href="../css/areaadmin.css">
 </head>
 <body>
   <header>
