--- a/login.html
+++ b/login.html
@@ -5,70 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Space Burguer</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            background-color: #0d0d0d;
-            color: #fff;
-            font-family: 'Orbitron', sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .container {
-            background-color: #1a1a1a;
-            padding: 40px;
-            border-radius: 10px;
-            width: 300px;
-            box-shadow: 0 0 20px #ffcc00;
-            text-align: center;
-        }
-        h2 {
-            color: #ffcc00;
-            margin-bottom: 20px;
-        }
-        input {
-            width: 90%;
-            padding: 10px;
-            margin: 10px 0;
-            border: none;
-            border-radius: 5px;
-        }
-        button {
-            background-color: #ffcc00;
-            color: #0d0d0d;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-weight: bold;
-        }
-        button:hover {
-            background-color: #e6b800;
-        }
-        p {
-            font-size: 0.9rem;
-            margin-top: 15px;
-        }
-        a {
-            color: #ffcc00;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="../css/login.css">
 </head>
 <body>
     <div class="container">
         <h2>Login</h2>
-        <form action="pagina_principal.html">
-            <input type="email" placeholder="Email" required><br>
-            <input type="password" placeholder="Senha" required><br>
+        <form id="formLogin">
+            <input type="email" id="email" placeholder="Email" required><br>
+            <input type="password" id="senha" placeholder="Senha" required><br>
             <button type="submit">Entrar</button>
         </form>
         <p>Não tem uma conta? <a href="cadastro.html">Cadastre-se</a></p>
     </div>
+    <script src="../js/login.js"></script>
 </body>
 </html>
