--- a/home.html
+++ b/home.html
@@ -129,7 +129,7 @@
                     <button class="add-to-cart" onclick="adicionarAoCarrinho('Anéis de Cebola', 6.99)">Adicionar ao Carrinho</button>
                 </div>
                 <div class="menu-item">
-                    <img src="img/sides/monica.webp  " alt="Astro Rings">
+                    <img src="monica.webp  " alt="Astro Rings">
                     <h4>Miojo da turma da Mônica</h4>
                     <div class="stars">⭐⭐⭐⭐⭐⭐⭐⭐⭐</div>
                     <p>O melhor miojo de legumes do mundo!</p>
@@ -189,7 +189,7 @@
                 </div>
             </div>
         </div>
-        <script src="../js/adicionar-carrinho.js"></script>
+        <script src="adicionar-carrinho.js"></script>
     </section>
     <footer id="contact">
         <p>Contatos: atendimento@spaceburguer.com.br | Telefone: (21) 867-5309</p>
