--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <button class="add-to-cart" onclick="adicionarAoCarrinho('Anéis de Cebola', 6.99)">Adicionar ao Carrinho</button>
                 </div>
                 <div class="menu-item">
-                    <img src="img/sides/monica.webp  " alt="Astro Rings">
+                    <img src="img/sides/monica.jpg" alt="Astro Rings">
                     <h4>Miojo da turma da Mônica</h4>
                     <div class="stars">⭐⭐⭐⭐⭐⭐⭐⭐⭐</div>
                     <p>O melhor miojo de legumes do mundo!</p>
