--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h3>Hambúrgueres</h3>
             <div class="menu-items">
                 <div class="menu-item">
-                    <img src="../img/burguers/b1.jpg" alt="Galactic Classic">
+                    <img src="img/burguers/b1.jpg" alt="Galactic Classic">
                     <h4>Galactic Burguer</h4>
                     <div class="stars">⭐⭐⭐⭐</div>
                     <p>O clássico hambúrguer com um toque sideral.</p>
@@ -42,7 +42,7 @@
 
                 </div>
                 <div class="menu-item">
-                    <img src="../img/burguers/b2.jpg" alt="Astro Cheese">
+                    <img src="img/burguers/b2.jpg" alt="Astro Cheese">
                     <h4>Astro Cheese</h4>
                     <div class="stars">⭐⭐⭐</div>
                     <p>Delicioso queijo de outra galáxia.</p>
@@ -51,7 +51,7 @@
 
                 </div>
                 <div class="menu-item">
-                    <img src="../img/burguers/b3.jpg" alt="Rocket BBQ">
+                    <img src="img/burguers/b3.jpg" alt="Rocket BBQ">
                     <h4>Rocket Barbecue</h4>
                     <div class="stars">⭐⭐⭐⭐⭐</div>
                     <p>Sabor defumado de churrasco que vai despertar o seu paladar.</p>
@@ -60,7 +60,7 @@
 
                 </div>
                 <div class="menu-item">
-                    <img src="../img/burguers/b4.jpg" alt="Galactic Classic">
+                    <img src="img/burguers/b4.jpg" alt="Galactic Classic">
                     <h4>Burger Eclipse</h4>
                     <div class="stars">⭐⭐⭐⭐</div>
                     <p>Um sabor que apaga a luz da concorrência!</p>
@@ -69,7 +69,7 @@
 
                 </div>
                 <div class="menu-item">
-                    <img src="../img/burguers/b5.jpg" alt="Astro Cheese">
+                    <img src="img/burguers/b5.jpg" alt="Astro Cheese">
                     <h4>Via Láctea Cheddar</h4>
                     <div class="stars">⭐⭐</div>
                     <p>Tão gostoso que parece coisa de outro universo.</p>
@@ -78,7 +78,7 @@
 
                 </div>
                 <div class="menu-item">
-                    <img src="../img/burguers/b6.jpg" alt="Rocket BBQ">
+                    <img src="img/burguers/b6.jpg" alt="Rocket BBQ">
                     <h4>Saturn Bacon</h4>
                     <div class="stars">⭐⭐⭐⭐⭐</div>
                     <p>Um clássico com órbita própria!</p>
@@ -87,7 +87,7 @@
 
                 </div>
                 <div class="menu-item">
-                    <img src="../img/burguers/b7.jpg" alt="Astro Cheese">
+                    <img src="img/burguers/b7.jpg" alt="Astro Cheese">
                     <h4>UFO Chicken</h4>
                     <div class="stars">⭐⭐⭐</div>
                     <p>Um disco voador de sabor.</p>
@@ -96,7 +96,7 @@
 
                 </div>
                 <div class="menu-item">
-                    <img src="../img/burguers/b8.jpg" alt="Rocket BBQ">
+                    <img src="img/burguers/b8.jpg" alt="Rocket BBQ">
                     <h4>Estrelinha Kids</h4>
                     <div class="stars">⭐</div>
                     <p>A refeição perfeita para cadetes espaciais.</p>
@@ -112,7 +112,7 @@
             <h3>Acompanhamentos</h3>
             <div class="menu-items">
                 <div class="menu-item">
-                    <img src="../img/sides/batatinha.jpg" alt="Galaxy Fries">
+                    <img src="img/sides/batatinha.jpg" alt="Galaxy Fries">
                     <h4>Batatas Galácticas</h4>
                     <div class="stars">⭐⭐⭐</div>
                     <p>Batatas fritas crocantes polvilhadas com tempero cósmico.</p>
@@ -121,7 +121,7 @@
 
                 </div>
                 <div class="menu-item">
-                    <img src="../img/sides/cebolinha.jpg" alt="Astro Rings">
+                    <img src="img/sides/cebolinha.jpg" alt="Astro Rings">
                     <h4>Anéis de Cebola</h4>
                     <div class="stars">⭐⭐⭐⭐</div>
                     <p>Anéis de cebola com um crocante galáctico.</p>
@@ -144,7 +144,7 @@
             <h3>Bebidas</h3>
             <div class="menu-items">
                 <div class="menu-item">
-                    <img src="../img/juices/ginger-juice-4896003_1920.jpg" alt="Cosmic Cola">
+                    <img src="img/juices/ginger-juice-4896003_1920.jpg" alt="Cosmic Cola">
                     <h4>Solar Fizz</h4>
                     <div class="stars">⭐⭐⭐</div>
                     <p>Um refresco refrescante que vai explodir seu paladar.</p>
@@ -153,7 +153,7 @@
 
                 </div>
                 <div class="menu-item">
-                    <img src="../img/juices/juice-2561339_1920.jpg" alt="Starfruit Shake">
+                    <img src="img/juices/juice-2561339_1920.jpg" alt="Starfruit Shake">
                     <h4>Triple StarBerry</h4>
                     <div class="stars">⭐⭐⭐⭐⭐</div>
                     <p>Um milk-shake doce feito com sorvete e estrelas.</p>
@@ -162,7 +162,7 @@
 
                 </div>
                 <div class="menu-item">
-                    <img src="../img/juices/sugarcane-5388628_1920.jpg" alt="Cosmic Cola">
+                    <img src="img/juices/sugarcane-5388628_1920.jpg" alt="Cosmic Cola">
                     <h4>Névoa de Netuno</h4>
                     <div class="stars">⭐⭐</div>
                     <p>Refrigerante azul com toque de limão e hortelã.</p>
@@ -171,7 +171,7 @@
 
                 </div>
                 <div class="menu-item">
-                    <img src="../img/juices/500.png" alt="Starfruit Shake">
+                    <img src="img/juices/500.png" alt="Starfruit Shake">
                     <h4>Pó de Estrela</h4>
                     <div class="stars">⭐⭐⭐⭐⭐</div>
                     <p>Milkshake de baunilha com glitter comestível.</p>
@@ -180,7 +180,7 @@
 
                 </div>
                 <div class="menu-item">
-                    <img src="../img/juices/grape-juice-recipe.jpg" alt="Cosmic Cola">
+                    <img src="img/juices/grape-juice-recipe.jpg" alt="Cosmic Cola">
                     <h4>Fusão Solar</h4>
                     <div class="stars">⭐⭐⭐</div>
                     <p>Suco de frutas cítricas com explosão de maracujá.</p>
