Update and rename carrinho.html to pages/carrinho.html
UAU

--- a/pages/carrinho.html
+++ b/pages/carrinho.html
@@ -23,7 +23,7 @@
     <div class="botoes">
         <button id="finalizarBtn" class="btn" onclick="finalizarPedido()">Finalizar Pedido</button>
         <button id="limparBtn" class="btn" onclick="confirmarLimparCarrinho()">Esvaziar Carrinho</button>
-        <a href="home.html" class="btn">Voltar ao Cardápio</a>
+        <a href="../index.html" class="btn">Voltar ao Cardápio</a>
     </div>
 </main>
 
