--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <a href="#home">Home</a>
                 <a href="#menu">Cardápio</a>
                 <a href="#contact">Contato</a>
-                <a href="login.html">Entre</a>
-                <a href="cadastro.html">Cadastre-se</a>
-                <a href="carrinho.html">Carrinho</a>
+                <a href="pages/login.html">Entre</a>
+                <a href="pages/cadastro.html">Cadastre-se</a>
+                <a href="pages/carrinho.html">Carrinho</a>
             </nav>
         </header>
     </header>
