--- a/pages/areacliente.html
+++ b/pages/areacliente.html
@@ -12,11 +12,10 @@
     <header class="custom-menu">
         <h1>Space Burguer</h1>
         <nav>
-            <a href="#home">Home</a>
-            <a href="#menu">Cardápio</a>
-            <a href="#contact">Contato</a>
-            <a href="login.html">Entre</a>
-            <a href="cadastro.html">Cadastre-se</a>
+            <a href="../index.html">Home</a>
+            <a href="../index.html#menu">Cardápio</a>
+            <a href="../indexhtml#contact">Contato</a>
+            <a href="carrinho.html">Seu Carrinho</a>
         </nav>
     </header>
 
