--- a/pages/areacliente.html
+++ b/pages/areacliente.html
@@ -14,7 +14,7 @@
         <nav>
             <a href="../index.html">Home</a>
             <a href="../index.html#menu">Cardápio</a>
-            <a href="../indexhtml#contact">Contato</a>
+            <a href="../index.html#contact">Contato</a>
             <a href="carrinho.html">Seu Carrinho</a>
         </nav>
     </header>
