--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     </section>
     <footer id="contact">
         <p>Contatos: atendimento@spaceburguer.com.br | Telefone: (21) 867-5309</p>
-        <p>&copy; © 2025 Hamburgueria Space Burguer. Todos os direitos não estão reservados.</p>
+        <p>&copy; 2025 Hamburgueria Space Burguer. Todos os direitos não estão reservados.</p>
     </footer>
 </body>
 </html>
