--- a/pages/login.html
+++ b/pages/login.html
@@ -16,7 +16,29 @@
             <button type="submit">Entrar</button>
         </form>
         <p>Não tem uma conta? <a href="cadastro.html">Cadastre-se</a></p>
+
+        <!-- 🔥 Botão de voltar para o home -->
+        <a href="../pages/home.html" class="voltar-home">← Voltar para Home</a>
     </div>
+    <style>
+        .voltar-home {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 8px 16px;
+    background-color: #333;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    font-family: 'Orbitron', sans-serif;
+}
+
+.voltar-home:hover {
+    background-color: #555;
+}
+
+    </style>
+
     <script src="../js/login.js"></script>
 </body>
 </html>
