--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <a href="pages/login.html">Entre</a>
                 <a href="pages/cadastro.html">Cadastre-se</a>
                 <a href="pages/carrinho.html">Carrinho</a>
+                <a href="pages/loginAdmin.html">Administrativo</a>
             </nav>
         </header>
     </header>
