--- a/pages/areaadmin.html
+++ b/pages/areaadmin.html
@@ -62,6 +62,21 @@
               <button class="btn">Excluir</button>
             </td>
           </tr>
+          <tr>
+            <td>André Matheus</td>
+            <td>andre@email.com</td>
+            <td>
+              <button class="btn">Editar</button>
+              <button class="btn">Excluir</button>
+            </td>
+            <tr>
+            <td>Miguel Lorenzo</td>
+            <td>miguel@email.com</td>
+            <td>
+              <button class="btn">Editar</button>
+              <button class="btn">Excluir</button>
+            </td>
+          </tr>
         </tbody>
       </table>
     </div>
